major revisions, and added releaser app to start testing more fleshed out code

--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -1,4 +1,9 @@
 <h2>Here is das</h2>
-{{#each }}
- <p>{{this}}</p>
+{{#each}}
+ <p>{{name}} - {{description}}</p>
+ <ul>
+ 	{{#each releases}}
+ 		<li>{{name}} - {{catalogueNumber}}</li>
+ 	{{/each}}
+ </ul>
 {{/each}}
