--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -1,20 +1,2 @@
-<div class="fixed">
-	<nav id="main-navigation" class="top-bar">
-	  <ul class="title-area">
-	    <li class="name">
-	      <h1><a href="#">Releaser</a></h1>
-	    </li>
-	  </ul>
-
-		<section class="top-bar-section">
-	    <ul class="right">
-	     	<li class="divider"></li>
-	     	<li>{{#link-to 'artists'}}Artists{{/link-to}}</li>
-	     	<li class="divider"></li>
-	     	<li>{{#link-to 'releases'}}Releases{{/link-to}}</li>
-	    </ul>
-		</section>
-	</nav>
-</div>
 {{partial 'partials/top_bar'}}
-{{outlet}}
+<div id="content">{{outlet}}</div>
