--- a/app/templates/partials/_top_bar.handlebars
+++ b/app/templates/partials/_top_bar.handlebars
@@ -1,8 +1,10 @@
-<div class="fixed">
-	<nav id="main-navigation" class="top-bar">
+<div id="top-bar" class="fixed">
+
+	<nav class="top-bar">
+	  
 	  <ul class="title-area">
 	    <li class="name">
-	      <h1><a href="#">Releaser</a></h1>
+	      <h1><a href="#">Quad</a></h1>
 	    </li>
 	  </ul>
 
@@ -10,9 +12,9 @@
 	    <ul class="right">
 	     	<li class="divider"></li>
 	     	<li>{{#link-to 'artists'}}Artists{{/link-to}}</li>
-	     	<li class="divider"></li>
-	     	<li>{{#link-to 'releases'}}Releases{{/link-to}}</li>
 	    </ul>
 		</section>
+	
 	</nav>
+
 </div>
