--- a/app/stylesheets/settings/_colors.scss
+++ b/app/stylesheets/settings/_colors.scss
@@ -1,6 +1,14 @@
-$primary-color: #008CBA;
-$secondary-color: #e7e7e7;
-$alert-color: #f04124;
-$success-color: #43AC6A;
-$warning-color: #f08a24;
-$info-color: #a0d3e8;
+//$primary-color: #008CBA;
+//$secondary-color: #e7e7e7;
+//$alert-color: #f04124;
+//$success-color: #43AC6A;
+//$warning-color: #f08a24;
+//$info-color: #a0d3e8;
+
+$primary-color: #68A8BF;
+$secondary-color: #D7E7E3;
+$alert-color: #95455E;
+$success-color: #BED9CE;
+$warning-color: #5E5679;
+$info-color: #594F4F;
+
