--- a/app/templates/artists.handlebars
+++ b/app/templates/artists.handlebars
@@ -1,2 +1,8 @@
-{{#link-to 'artists.new' classNames='button'}}New Artist{{/link-to}}
- 
+<p class="text-center" style="margin-top:100px">
+	{{#link-to 'artists.new' classNames='quad-button radius'}}Primary{{/link-to}}
+	{{#link-to 'artists.new' classNames='quad-button radius secondary'}}Secondary{{/link-to}}
+	{{#link-to 'artists.new' classNames='quad-button radius alert'}}Alert{{/link-to}}
+	{{#link-to 'artists.new' classNames='quad-button radius warning'}}Warning{{/link-to}}
+	{{#link-to 'artists.new' classNames='quad-button radius success'}}Success{{/link-to}}
+	{{#link-to 'artists.new' classNames='quad-button radius info'}}Info{{/link-to}}
+</p>
