--- a/app/templates/artists/new.handlebars
+++ b/app/templates/artists/new.handlebars
@@ -1,2 +1,2 @@
 <p>We are riding in the new artist modal</p>
-{{#link-to 'artists' classNames='button'}}Close{{/link-to}}
+{{#link-to 'artists' classNames='quad-button radius'}}Close{{/link-to}}
