--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -1,6 +1,6 @@
-@import '../../vendor/foundation/scss/normalize';
+@import 'vendor/foundation/scss/normalize';
 @import './settings';
-@import '../../vendor/foundation/scss/foundation';
+@import 'vendor/foundation/scss/foundation';
 @import './global';
 @import './modal';
 @import './top_bar';
